versions/0.8.0/_sources/refs/_aws-cdk_aws-appsync.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"melXKl4VZZT6GjnqTouPBv9ujh/5lmxd3bQ93AFqLl0="}

@aws-cdk/aws-appsync
====================

.. mdinclude:: ./__aws-cdk_aws-appsync.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-appsync

ApiKey
^^^^^^

.. py:class:: ApiKey([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ApiKeyArn
^^^^^^^^^

.. py:class:: ApiKeyArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

DataSourceArn
^^^^^^^^^^^^^

.. py:class:: DataSourceArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

DataSourceName
^^^^^^^^^^^^^^

.. py:class:: DataSourceName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

GraphQLApiApiId
^^^^^^^^^^^^^^^

.. py:class:: GraphQLApiApiId([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

GraphQLApiArn
^^^^^^^^^^^^^

.. py:class:: GraphQLApiArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

GraphQLApiGraphQlUrl
^^^^^^^^^^^^^^^^^^^^

.. py:class:: GraphQLApiGraphQlUrl([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ResolverArn
^^^^^^^^^^^

.. py:class:: ResolverArn([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ResolverFieldName
^^^^^^^^^^^^^^^^^

.. py:class:: ResolverFieldName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ResolverTypeName
^^^^^^^^^^^^^^^^

.. py:class:: ResolverTypeName([valueOrFunction])

   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-appsync.cloudformation

ApiKeyResource
~~~~~~~~~~~~~~

.. py:class:: ApiKeyResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApiKeyResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApiKeyResource``
   :type properties: :py:class:`~@aws-cdk/aws-appsync.cloudformation.ApiKeyResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: apiKey

      :type: :py:class:`~@aws-cdk/aws-appsync.ApiKey` *(readonly)*


   .. py:attribute:: apiKeyArn

      :type: :py:class:`~@aws-cdk/aws-appsync.ApiKeyArn` *(readonly)*


ApiKeyResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApiKeyResourceProps



   .. py:attribute:: apiId

      ``AWS::AppSync::ApiKey.ApiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-apikey.html#cfn-appsync-apikey-apiid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::AppSync::ApiKey.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-apikey.html#cfn-appsync-apikey-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: expires

      ``AWS::AppSync::ApiKey.Expires``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-apikey.html#cfn-appsync-apikey-expires


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


DataSourceResource
~~~~~~~~~~~~~~~~~~

.. py:class:: DataSourceResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DataSourceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DataSourceResource``
   :type properties: :py:class:`~@aws-cdk/aws-appsync.cloudformation.DataSourceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: dataSourceArn

      :type: :py:class:`~@aws-cdk/aws-appsync.DataSourceArn` *(readonly)*


   .. py:attribute:: dataSourceName

      :type: :py:class:`~@aws-cdk/aws-appsync.DataSourceName` *(readonly)*

   .. py:class:: DynamoDBConfigProperty



      .. py:attribute:: awsRegion

         ``DataSourceResource.DynamoDBConfigProperty.AwsRegion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-dynamodbconfig.html#cfn-appsync-datasource-dynamodbconfig-awsregion


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: tableName

         ``DataSourceResource.DynamoDBConfigProperty.TableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-dynamodbconfig.html#cfn-appsync-datasource-dynamodbconfig-tablename


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: useCallerCredentials

         ``DataSourceResource.DynamoDBConfigProperty.UseCallerCredentials``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-dynamodbconfig.html#cfn-appsync-datasource-dynamodbconfig-usecallercredentials


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ElasticsearchConfigProperty



      .. py:attribute:: awsRegion

         ``DataSourceResource.ElasticsearchConfigProperty.AwsRegion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-elasticsearchconfig.html#cfn-appsync-datasource-elasticsearchconfig-awsregion


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: endpoint

         ``DataSourceResource.ElasticsearchConfigProperty.Endpoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-elasticsearchconfig.html#cfn-appsync-datasource-elasticsearchconfig-endpoint


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LambdaConfigProperty



      .. py:attribute:: lambdaFunctionArn

         ``DataSourceResource.LambdaConfigProperty.LambdaFunctionArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-datasource-lambdaconfig.html#cfn-appsync-datasource-lambdaconfig-lambdafunctionarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`



DataSourceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DataSourceResourceProps



   .. py:attribute:: apiId

      ``AWS::AppSync::DataSource.ApiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-apiid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: dataSourceName

      ``AWS::AppSync::DataSource.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: type

      ``AWS::AppSync::DataSource.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::AppSync::DataSource.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: dynamoDbConfig

      ``AWS::AppSync::DataSource.DynamoDBConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-dynamodbconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.DataSourceResource.DynamoDBConfigProperty` or undefined


   .. py:attribute:: elasticsearchConfig

      ``AWS::AppSync::DataSource.ElasticsearchConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-elasticsearchconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.DataSourceResource.ElasticsearchConfigProperty` or undefined


   .. py:attribute:: lambdaConfig

      ``AWS::AppSync::DataSource.LambdaConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-lambdaconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.DataSourceResource.LambdaConfigProperty` or undefined


   .. py:attribute:: serviceRoleArn

      ``AWS::AppSync::DataSource.ServiceRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-datasource.html#cfn-appsync-datasource-servicerolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


GraphQLApiResource
~~~~~~~~~~~~~~~~~~

.. py:class:: GraphQLApiResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``GraphQLApiResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``GraphQLApiResource``
   :type properties: :py:class:`~@aws-cdk/aws-appsync.cloudformation.GraphQLApiResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: graphQlApiApiId

      :type: :py:class:`~@aws-cdk/aws-appsync.GraphQLApiApiId` *(readonly)*


   .. py:attribute:: graphQlApiArn

      :type: :py:class:`~@aws-cdk/aws-appsync.GraphQLApiArn` *(readonly)*


   .. py:attribute:: graphQlApiGraphQlUrl

      :type: :py:class:`~@aws-cdk/aws-appsync.GraphQLApiGraphQlUrl` *(readonly)*

   .. py:class:: LogConfigProperty



      .. py:attribute:: cloudWatchLogsRoleArn

         ``GraphQLApiResource.LogConfigProperty.CloudWatchLogsRoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-logconfig.html#cfn-appsync-graphqlapi-logconfig-cloudwatchlogsrolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: fieldLogLevel

         ``GraphQLApiResource.LogConfigProperty.FieldLogLevel``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-logconfig.html#cfn-appsync-graphqlapi-logconfig-fieldloglevel


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: OpenIDConnectConfigProperty



      .. py:attribute:: authTtl

         ``GraphQLApiResource.OpenIDConnectConfigProperty.AuthTTL``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-openidconnectconfig.html#cfn-appsync-graphqlapi-openidconnectconfig-authttl


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: clientId

         ``GraphQLApiResource.OpenIDConnectConfigProperty.ClientId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-openidconnectconfig.html#cfn-appsync-graphqlapi-openidconnectconfig-clientid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: iatTtl

         ``GraphQLApiResource.OpenIDConnectConfigProperty.IatTTL``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-openidconnectconfig.html#cfn-appsync-graphqlapi-openidconnectconfig-iatttl


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: issuer

         ``GraphQLApiResource.OpenIDConnectConfigProperty.Issuer``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-openidconnectconfig.html#cfn-appsync-graphqlapi-openidconnectconfig-issuer


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: UserPoolConfigProperty



      .. py:attribute:: appIdClientRegex

         ``GraphQLApiResource.UserPoolConfigProperty.AppIdClientRegex``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-userpoolconfig.html#cfn-appsync-graphqlapi-userpoolconfig-appidclientregex


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: awsRegion

         ``GraphQLApiResource.UserPoolConfigProperty.AwsRegion``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-userpoolconfig.html#cfn-appsync-graphqlapi-userpoolconfig-awsregion


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: defaultAction

         ``GraphQLApiResource.UserPoolConfigProperty.DefaultAction``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-userpoolconfig.html#cfn-appsync-graphqlapi-userpoolconfig-defaultaction


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: userPoolId

         ``GraphQLApiResource.UserPoolConfigProperty.UserPoolId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-appsync-graphqlapi-userpoolconfig.html#cfn-appsync-graphqlapi-userpoolconfig-userpoolid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



GraphQLApiResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: GraphQLApiResourceProps



   .. py:attribute:: authenticationType

      ``AWS::AppSync::GraphQLApi.AuthenticationType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlapi.html#cfn-appsync-graphqlapi-authenticationtype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: graphQlApiName

      ``AWS::AppSync::GraphQLApi.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlapi.html#cfn-appsync-graphqlapi-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: logConfig

      ``AWS::AppSync::GraphQLApi.LogConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlapi.html#cfn-appsync-graphqlapi-logconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.GraphQLApiResource.LogConfigProperty` or undefined


   .. py:attribute:: openIdConnectConfig

      ``AWS::AppSync::GraphQLApi.OpenIDConnectConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlapi.html#cfn-appsync-graphqlapi-openidconnectconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.GraphQLApiResource.OpenIDConnectConfigProperty` or undefined


   .. py:attribute:: userPoolConfig

      ``AWS::AppSync::GraphQLApi.UserPoolConfig``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlapi.html#cfn-appsync-graphqlapi-userpoolconfig


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-appsync.cloudformation.GraphQLApiResource.UserPoolConfigProperty` or undefined


GraphQLSchemaResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: GraphQLSchemaResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``GraphQLSchemaResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``GraphQLSchemaResource``
   :type properties: :py:class:`~@aws-cdk/aws-appsync.cloudformation.GraphQLSchemaResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


GraphQLSchemaResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: GraphQLSchemaResourceProps



   .. py:attribute:: apiId

      ``AWS::AppSync::GraphQLSchema.ApiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlschema.html#cfn-appsync-graphqlschema-apiid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: definition

      ``AWS::AppSync::GraphQLSchema.Definition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlschema.html#cfn-appsync-graphqlschema-definition


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: definitionS3Location

      ``AWS::AppSync::GraphQLSchema.DefinitionS3Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-graphqlschema.html#cfn-appsync-graphqlschema-definitions3location


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ResolverResource
~~~~~~~~~~~~~~~~

.. py:class:: ResolverResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ResolverResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ResolverResource``
   :type properties: :py:class:`~@aws-cdk/aws-appsync.cloudformation.ResolverResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: resolverFieldName

      :type: :py:class:`~@aws-cdk/aws-appsync.ResolverFieldName` *(readonly)*


   .. py:attribute:: resolverArn

      :type: :py:class:`~@aws-cdk/aws-appsync.ResolverArn` *(readonly)*


   .. py:attribute:: resolverTypeName

      :type: :py:class:`~@aws-cdk/aws-appsync.ResolverTypeName` *(readonly)*


ResolverResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ResolverResourceProps



   .. py:attribute:: apiId

      ``AWS::AppSync::Resolver.ApiId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-apiid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: dataSourceName

      ``AWS::AppSync::Resolver.DataSourceName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-datasourcename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: fieldName

      ``AWS::AppSync::Resolver.FieldName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-fieldname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: typeName

      ``AWS::AppSync::Resolver.TypeName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-typename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: requestMappingTemplate

      ``AWS::AppSync::Resolver.RequestMappingTemplate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-requestmappingtemplate


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: requestMappingTemplateS3Location

      ``AWS::AppSync::Resolver.RequestMappingTemplateS3Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-requestmappingtemplates3location


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: responseMappingTemplate

      ``AWS::AppSync::Resolver.ResponseMappingTemplate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-responsemappingtemplate


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: responseMappingTemplateS3Location

      ``AWS::AppSync::Resolver.ResponseMappingTemplateS3Location``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-appsync-resolver.html#cfn-appsync-resolver-responsemappingtemplates3location


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-appsync

